# flattened-cnn

./: cunnconv1d-scm-1.rockspec  fetch_this.sh
cunn-conv1d/: CMakeLists.txt
nn-conv1d/generic/: HorizontalConvolution.c  LateralConvolution.c  VerticalConvolution.c
